2004-07-28 Gustaf.Neumann@wu-wien.ac.at
        * yet another fixed access to freed memory 
          (thanks to Zoran for his help with Purify )

2004-07-26 Gustaf.Neumann@wu-wien.ac.at
        * fixed bug in filters in connection with instmixin; 
          inactive tcl callstack frame was dereferenced. This fixed as well 
          a potential uplevel bug
        * fixed access to freed memory (thanks to Zoran for his help with Purify )

2004-07-23 Gustaf.Neumann@wu-wien.ac.at
        * implemented expermental next method for delegating same-named procs
          to different objects

2004-07-20 Gustaf.Neumann@wu-wien.ac.at
        * fixed a potential crash when a instmixin was registered on itself

2004-07-19  Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * added checkoptions to non pos args
	* added tests & documentation of non pos args

2004-07-18 Gustaf.Neumann@wu-wien.ac.at
        * added removal of autom4te.cache to distclean
        * make doc added to "all" target
        * autogenerated html docs are removed in a make clean
        * remove all *~ files in directory tree via find (ok with TEA3?)

2004-07-11 jim@jam.sessionsnet.org
        * revamped configure recursion
        * added "--with-xotcl=<pathToXotclConfig.sh>" to child configure.ins
        * arranged for root configure to call child configures specifying path
        * located and fixed bug where parts of the build cannot find xotcl.h
           if xotcl was not "make install"ed (bug implies build always finds
           old includes)
        * ensured "make clean" and "make distclean" still worked
        * TODO: clean should remove emacs backup files
              distclean should remove autom4te.cache
              docs should be built during make, installed during make install
              and removed from the build dir during make clean.

2004-07-03 Gustaf.Neumann@wu-wien.ac.at
        * extended commands filter, mixin, instfilter, instmixin: